--- a/src/main/resources/edu/farmingdale/taskmanager/boss-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/boss-view.fxml
@@ -135,47 +135,6 @@
                                           <Cursor fx:constant="HAND" />
                                       </cursor>
                                   </StackPane>
-                                  <StackPane prefHeight="85.0" prefWidth="169.0">
-                                      <children>
-                                          <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#5d3a01" height="65.0" stroke="#472c01" strokeType="INSIDE" strokeWidth="2.0" width="426.0" />
-                                          <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8f5902" height="55.0" stroke="#472c01" strokeType="INSIDE" strokeWidth="2.0" width="416.0" />
-                                          <Rectangle arcHeight="5.0" arcWidth="5.0" height="45.0" stroke="#472c01" strokeType="INSIDE" strokeWidth="2.0" width="406.0">
-                                              <fill>
-                                                  <LinearGradient endX="1.0">
-                                                      <stops>
-                                                          <Stop>
-                                                              <color>
-                                                                  <Color />
-                                                              </color>
-                                                          </Stop>
-                                                          <Stop offset="0.006711409395973154">
-                                                              <color>
-                                                                  <Color red="0.019607843831181526" green="0.21960784494876862" blue="0.10980392247438431" />
-                                                              </color>
-                                                          </Stop>
-                                                          <Stop offset="0.5004910787362907">
-                                                              <color>
-                                                                  <Color red="0.03921568766236305" green="0.3450980484485626" blue="0.1764705926179886" />
-                                                              </color>
-                                                          </Stop>
-                                                          <Stop offset="1.0">
-                                                              <color>
-                                                                  <Color red="0.019607843831181526" green="0.21960784494876862" blue="0.10980392247438431" />
-                                                              </color>
-                                                          </Stop>
-                                                      </stops>
-                                                  </LinearGradient>
-                                              </fill>
-                                          </Rectangle>
-                                          <Label fx:id="failedButton" alignment="CENTER" maxWidth="406.0" onMouseClicked="#toggleActive" prefHeight="65.0" prefWidth="406.0" styleClass="button-label" text="Failed" />
-                                      </children>
-                                      <padding>
-                                          <Insets left="10.0" />
-                                      </padding>
-                                      <cursor>
-                                          <Cursor fx:constant="HAND" />
-                                      </cursor>
-                                  </StackPane>
                               </children>
                           </HBox>
                           <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="95.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="1338.0" />
@@ -226,7 +185,7 @@
                                                               </Label>
                                                           </children>
                                                       </StackPane>
-                                          <VBox fx:id="bossesContainer" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                                          <VBox fx:id="bossesContainer" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
                                              <VBox.margin>
                                                 <Insets top="10.0" />
                                              </VBox.margin>
@@ -267,7 +226,7 @@
                                                 </Label>
                                              </children>
                                           </StackPane>
-                                          <VBox fx:id="miniBossesContainer" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                                          <VBox fx:id="miniBossesContainer" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
                                              <VBox.margin>
                                                 <Insets top="10.0" />
                                              </VBox.margin>
@@ -345,6 +304,9 @@
                                                     <padding>
                                                         <Insets bottom="-15.0" left="5.0" top="-15.0" />
                                                     </padding>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
                                                 </Label>
                                     <StackPane>
                                        <children>
@@ -370,7 +332,7 @@
                                           <Insets bottom="-15.0" left="5.0" top="-15.0" />
                                        </padding>
                                     </Label>
-                                    <FlowPane fx:id="attacksContainer" hgap="10.0" prefHeight="200.0" prefWidth="200.0" prefWrapLength="874.0" vgap="10.0">
+                                    <FlowPane fx:id="attacksContainer" hgap="10.0" prefHeight="200.0" prefWidth="200.0" prefWrapLength="874.0" vgap="5.0">
                                        <padding>
                                           <Insets left="10.0" right="10.0" />
                                        </padding>
