--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -474,13 +474,13 @@
                                     <Insets top="10.0" />
                                  </VBox.margin>
                               </StackPane>
-                              <VBox fx:id="statContainer" prefHeight="200.0" prefWidth="100.0">
+                              <VBox fx:id="statContainer" prefWidth="100.0" spacing="15.0">
                                  <padding>
                                     <Insets left="10.0" />
                                  </padding></VBox>
                            </children>
                         </VBox>
-                        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="901.0" mouseTransparent="true" stroke="#472c01" strokeType="INSIDE" strokeWidth="2.0" width="739.0" />
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="901.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="739.0" />
                      </children>
                   </StackPane>
                </children>
