created fxml for custom boss

--- a/src/main/resources/edu/farmingdale/taskmanager/boss-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/boss-view.fxml
@@ -276,6 +276,9 @@
                                                    <VBox.margin>
                                                       <Insets top="10.0" />
                                                    </VBox.margin>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
                                                 </ImageView>
                                              </children>
                                           </VBox>
